src/components/FloorNav/styles.css
.floor-nav-wrapper {
  position: fixed;
  left: 12%;
  top: 25%;
  text-align: center;
  z-index: 5;
  transform: translateX(-50%);
}

.floor-nav {
  width: 328px;
  text-align: left;
  max-height: 484px;
  overflow: scroll;
  background: linear-gradient(
      0deg,
      rgba(255, 255, 255, 0.12),
      rgba(255, 255, 255, 0.12)
    ),
    #121212;
  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.14), 0px 3px 14px rgba(0, 0, 0, 0.12),
    0px 5px 5px rgba(0, 0, 0, 0.2);
  border-radius: 4px;
}

.nav-item {
  padding: 10px 0px 16px 16px;
}

.nav-item:hover {
  background-color: #8080807a;
  cursor: pointer;
}

